correct typo in main

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ varun.varma@rothamsted.ac.uk<br>
 <div class="main">
 <h1>Varun Varma</h1>
 
-<p>I am an ecosystems ecologist with an interest in all things quanitative and ecology. My research focusses on global change, biodiveristy, landscape ecology, vegetation dynamics, ecosystem function, ecosystem services and food security.</p>
+<p>I am an ecosystems ecologist with an interest in all things quantitative and ecology. My research focusses on global change, biodiveristy, landscape ecology, vegetation dynamics, ecosystem function, ecosystem services and food security.</p>
 
 <p>At present, I am an ecosystems services modeller on the AgLand project at Rothamsted Research, UK. The AgLand project, a collaboration between Rothamsted Research, UK's Centre for Ecology and Hydrology, and The James Hutton Institute, is looking at providing new data and models that enable the design of agricultural landscapes in the UK to deliver both sustainable food production and environmental benefits.</p>
 
