added links and updated research page with links

--- a/research.html
+++ b/research.html
@@ -29,7 +29,9 @@ varun.varma@rothamsted.ac.uk<br>
 
 <h3><u>Research</u></h3>
 
-<p><strong>Coming soon!</strong></p>
+<p><a href="https://scholar.google.com/citations?hl=en&user=UIswT8wAAAAJ">Google scholar profile</a></p>
+
+<p><a href="https://www.researchgate.net/profile/Varun-Varma-2">ResearchGate</a></p>
 
 
 
