--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@ varun.varma@rothamsted.ac.uk<br>
 <div class="main">
 <h1>Varun Varma</h1>
 
-<h3><u>Research</u></h3>
+<h2>Research</h2>
 
 <p><a href="https://scholar.google.com/citations?hl=en&user=UIswT8wAAAAJ">Google scholar profile</a></p>
 
