--- a/publications.html
+++ b/publications.html
@@ -24,42 +24,98 @@ varun.varma@rothamsted.ac.uk<br>
 </div>
 
 
+
 <div class="main">
 <h1>Varun Varma</h1>
 
-<h3><u>Publications</u></h3>
+<h2>Publications</h2>
 
-<p><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvs.13020"><b>Varma, V.</b>, & Sankaran, M. (2021). Nutrient deposition enhances post‐fire survival in non‐N‐fixing savanna tree seedlings. Journal of Vegetation Science, 32(2), e13020.</a></p>
+<p><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvs.13020"><b>Nutrient deposition enhances post‐fire survival in non‐N‐fixing savanna tree seedlings</b></a>
+  <br>
+  <psub><b>Varma, V.</b>, & Sankaran, M. (2021). Nutrient deposition enhances post‐fire survival in non‐N‐fixing savanna tree seedlings. <i>Journal of Vegetation Science</i>, 32(2). doi: 10.1111/jvs.13020</psub>
+</p>
 
-<p><a href="https://www.biorxiv.org/content/10.1101/2020.09.20.304899v1"><b>Varma, V.</b>, Thompson, W., Duarte, S. B., Krütli, P., Six, J., & Bebber, D. P. (2020). Mapping the impacts of hurricanes Maria and Irma on banana production area in the Dominican Republic. bioRxiv.</a></p>
+<p><a href="https://www.biorxiv.org/content/10.1101/2020.09.20.304899v1"><b>Mapping the impacts of hurricanes Maria and Irma on banana production area in the Dominican Republic</b></a>
+  <br>
+  <psub><b>Varma, V.</b>, Thompson, W., Duarte, S. B., Krütli, P., Six, J., & Bebber, D. P. (2020). Mapping the impacts of hurricanes Maria and Irma on banana production area in the Dominican Republic. <i>bioRxiv</i>. doi: 10.1101/2020.09.20.304899</psub>
+</p>
 
-<p><a href="https://www.frontiersin.org/articles/10.3389/ffgc.2019.00087/full">Osuri, A. M., Mendiratta, U., Naniwadekar, R., <b>Varma, V.</b>, & Naeem, S. (2020). Hunting and forest modification have distinct defaunation impacts on tropical mammals and birds. Frontiers in Forests and Global Change, 2, 87.</a></p>
+<p><a href="https://www.frontiersin.org/articles/10.3389/ffgc.2019.00087/full"><b>Hunting and forest modification have distinct defaunation impacts on tropical mammals and birds</b></a>
+  <br>
+  <psub>Osuri, A. M., Mendiratta, U., Naniwadekar, R.,<b>Varma, V.</b>, & Naeem, S. (2020). Hunting and forest modification have distinct defaunation impacts on tropical mammals and birds. <i>Frontiers in Forests and Global Change</i>, 2, 87. doi: 10.3389/ffgc.2019.00087</psub>
+</p>
 
-<p><a href="https://www.nature.com/articles/s41558-019-0559-9"><b>Varma, V.</b>, & Bebber, D. P. (2019). Climate change impacts on banana yields around the world. Nature climate change, 9(10), 752-757.</a></p>
+<p><a href="https://www.nature.com/articles/s41558-019-0559-9"><b>Climate change impacts on banana yields around the world</b></a>
+  <br>
+  <psub><b>Varma, V.</b>, & Bebber, D. P. (2019). Climate change impacts on banana yields around the world. <i>Nature climate change</i>, 9(10), 752-757. doi: 10.1038/s41558-019-0559-9</psub>
+<p>
 
-<p><a href="https://royalsocietypublishing.org/doi/10.1098/rstb.2018.0266">Chaloner, T. M., Fones, H. N., <b>Varma, V.</b>, Bebber, D. P., & Gurr, S. J. (2019). A new mechanistic model of weather-dependent Septoria tritici blotch disease risk. Philosophical Transactions of the Royal Society B, 374(1775), 20180266.</a></p>
+<p><a href="https://royalsocietypublishing.org/doi/10.1098/rstb.2018.0266"><b>A new mechanistic model of weather-dependent Septoria tritici blotch disease risk</b></a>
+  <br>
+  <psub>Chaloner, T. M., Fones, H. N., <b>Varma, V.</b>, Bebber, D. P., & Gurr, S. J. (2019). A new mechanistic model of weather-dependent Septoria tritici blotch disease risk. <i>Philosophical Transactions of the Royal Society B</i>, 374. doi: 10.1098/rstb.2018.0266</psub>
+</p>
 
-<p><a href="https://www.researchgate.net/publication/334598699_Climate_change_impacts_on_ecosystem_functions_and_services_in_India_An_exploration_of_concepts_and_a_state_of_knowledge_synthesis">Osuri, A.M., <b>Varma, V.</b>, & Singh, D. (2018). Climate change impacts on ecosystem functions and services in India: An exploration of concepts and a state of knowledge synthesis. Biodiversity and climate change: An Indian perspective, Ministry of Environment, Forests and Climate Change, Government of India, 26-44.</a></p>
+<p><a href="https://www.researchgate.net/publication/334598699_Climate_change_impacts_on_ecosystem_functions_and_services_in_India_An_exploration_of_concepts_and_a_state_of_knowledge_synthesis"><b>Climate change impacts on ecosystem functions and services in India: An exploration of concepts and a state of knowledge synthesis</b></a>
+  <br>
+  <psub>Osuri, A.M., <b>Varma, V.</b>, & Singh, D. (2018). Climate change impacts on ecosystem functions and services in India: An exploration of concepts and a state of knowledge synthesis. <i>Biodiversity and climate change: An Indian perspective</i>, Ministry of Environment, Forests and Climate Change, Government of India, 26-44.</psub>
+</p>
 
-<p><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.4289"><b>Varma, V.</b>, Catherin, A. M., & Sankaran, M. (2018). Effects of increased N and P availability on biomass allocation and root carbohydrate reserves differ between N‐fixing and non‐N‐fixing savanna tree seedlings. Ecology and Evolution, 8(16), 8467-8476.</a></p>
+<p><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.4289"><b>Effects of increased N and P availability on biomass allocation and root carbohydrate reserves differ between N‐fixing and non‐N‐fixing savanna tree seedlings</b></a>
+  <br>
+  <psub><b>Varma, V.</b>, Catherin, A. M., & Sankaran, M. (2018). Effects of increased N and P availability on biomass allocation and root carbohydrate reserves differ between N‐fixing and non‐N‐fixing savanna tree seedlings. <i>Ecology and Evolution</i>, 8(16), 8467-8476. doi: 10.1002/ece3.4289</psub>
+</p>
 
-<p><a href="https://esajournals.onlinelibrary.wiley.com/doi/abs/10.1002/ecm.1284">Kunin, W. E., Harte, J., He, F., Hui, C., Jobe, R. T., Ostling, A., ... & <b>Varma, V.</b> (2018). Upscaling biodiversity: estimating the species–area relationship from small samples. Ecological Monographs, 88(2), 170-187.</a></p>
+<p><a href="https://esajournals.onlinelibrary.wiley.com/doi/abs/10.1002/ecm.1284"><b>Upscaling biodiversity: estimating the species–area relationship from small samples</b></a>
+  <br>
+  <psub>Kunin, W. E., Harte, J., He, F., Hui, C., Jobe, R. T., Ostling, A., ... & <b>Varma, V.</b> (2018). Upscaling biodiversity: estimating the species–area relationship from small samples. <i>Ecological Monographs</i>, 88(2), 170-187. doi: 10.1002/ecm.1284</psub>
+</p>
 
-<p><a href="https://link.springer.com/article/10.1007/s11258-018-0803-9">Tiruvaimozhi, Y. V., <b>Varma, V.</b>, & Sankaran, M. (2018). Nitrogen fixation ability explains leaf chemistry and arbuscular mycorrhizal responses to fertilization. Plant Ecology, 219(4), 391-401.</a></p>
+<p><a href="https://link.springer.com/article/10.1007/s11258-018-0803-9"><b>Nitrogen fixation ability explains leaf chemistry and arbuscular mycorrhizal responses to fertilization</b></a>
+  <br>
+  <psub>Tiruvaimozhi, Y. V., <b>Varma, V.</b>, & Sankaran, M. (2018). Nitrogen fixation ability explains leaf chemistry and arbuscular mycorrhizal responses to fertilization. <i>Plant Ecology</i>, 219(4), 391-401. doi: 10.1007/s11258-018-0803-9</psub>
+</p>
 
-<p><a href="https://link.springer.com/article/10.1007/s11258-016-0630-9"><b>Varma, V.</b>, Iyengar, S. B., & Sankaran, M. (2016). Effects of nutrient addition and soil drainage on germination of N-fixing and non-N-fixing tropical dry forest tree species. Plant Ecology, 217(8), 1043-1054.</a></p>
+<p><a href="https://link.springer.com/article/10.1007/s11258-016-0630-9"><b>Effects of nutrient addition and soil drainage on germination of N-fixing and non-N-fixing tropical dry forest tree species</b></a>
+  <br>
+  <psub><b>Varma, V.</b>, Iyengar, S. B., & Sankaran, M. (2016). Effects of nutrient addition and soil drainage on germination of N-fixing and non-N-fixing tropical dry forest tree species. <i>Plant Ecology</i>, 217(8), 1043-1054. doi: 10.1007/s11258-016-0630-9</psub>
+</p>
 
-<p><a href="https://www.nature.com/articles/ncomms11351">Osuri, A. M., Ratnam, J., <b>Varma, V.</b>, Alvarez-Loayza, P., Astaiza, J. H., Bradford, M., ... & Sankaran, M. (2016). Contrasting effects of defaunation on aboveground carbon storage across the global tropics. Nature Communications, 7(1), 1-7.</a></p>
+<p><a href="https://www.nature.com/articles/ncomms11351"><b>Contrasting effects of defaunation on aboveground carbon storage across the global tropics</b></a>
+  <br>
+  <psub>Osuri, A. M., Ratnam, J., <b>Varma, V.</b>, Alvarez-Loayza, P., Astaiza, J. H., Bradford, M., ... & Sankaran, M. (2016). Contrasting effects of defaunation on aboveground carbon storage across the global tropics. <i>Nature Communications</i>, 7, 11351. doi: 10.1038/ncomms11351</psub>
+</p>
 
-<p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0006320715001858"><b>Varma, V.</b>, Ratnam, J., Viswanathan, V., Osuri, A. M., Biesmeijer, J. C., Madhusudan, M. D., ... & Sundaram, B. (2015). Perceptions of priority issues in the conservation of biodiversity and ecosystems in India. Biological Conservation, 187, 201-211.</a></p>
+<p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0006320715001858"><b>Perceptions of priority issues in the conservation of biodiversity and ecosystems in India</b></a>
+  <br>
+  <psub><b>Varma, V.</b>, Ratnam, J., Viswanathan, V., Osuri, A. M., Biesmeijer, J. C., Madhusudan, M. D., ... & Sundaram, B. (2015). Perceptions of priority issues in the conservation of biodiversity and ecosystems in India. <i>Biological Conservation</i>, 187, 201-211. doi: 10.1016/j.biocon.2015.04.031</psub>
+</p>
 
-<p><a href="https://onlinelibrary.wiley.com/doi/full/10.1111/eva.12156">Savory, F. R., <b>Varma, V.</b>, & Ramakrishnan, U. (2014). Identifying geographic hot spots of reassortment in a multipartite plant virus. Evolutionary Applications, 7(5), 569-579.</a></p>
+<p><a href="https://onlinelibrary.wiley.com/doi/full/10.1111/eva.12156"><b>Identifying geographic hot spots of reassortment in a multipartite plant virus</b></a>
+  <br>
+  <psub>Savory, F. R., <b>Varma, V.</b>, & Ramakrishnan, U. (2014). Identifying geographic hot spots of reassortment in a multipartite plant virus. <i>Evolutionary Applications</i>, 7(5), 569-579. doi: 10.1111/eva.12156</psub>
+</p>
 
-<p><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.1013">Savory, F. R., Benton, T. G., <b>Varma, V.</b>, Hope, I. A., & Sait, S. M. (2014). Stressful environments can indirectly select for increased longevity. Ecology and Evolution, 4(7), 1176-1185.</a></p>
+<p><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.1013"><b>Stressful environments can indirectly select for increased longevity</b></a>
+  <br>
+  <psub>Savory, F. R., Benton, T. G., <b>Varma, V.</b>, Hope, I. A., & Sait, S. M. (2014). Stressful environments can indirectly select for increased longevity. <i>Ecology and Evolution</i>, 4(7), 1176-1185. doi: 10.1002/ece3.1013</psub>
+</p>
 
-<p><a href="https://link.springer.com/article/10.1007/s11258-013-0273-z"><b>Varma, V.</b>, & Osuri, A. M. (2013). Black Spot: a platform for automated and rapid estimation of leaf area from scanned images. Plant Ecology, 214(12), 1529-1534.</a></p>
+<p><a href="https://link.springer.com/article/10.1007/s11258-013-0273-z"><b>Black Spot: a platform for automated and rapid estimation of leaf area from scanned images</b></a>
+  <br>
+  <psub><b>Varma, V.</b>, & Osuri, A. M. (2013). Black Spot: a platform for automated and rapid estimation of leaf area from scanned images. <i>Plant Ecology</i>, 214(12), 1529-1534. doi: 10.1007/s11258-013-0273-z</psub>
+</p>
 
-<p><a href="https://www.sciencedirect.com/science/article/abs/pii/S143917911200045X">Campbell, A. J., Biesmeijer, J. C., <b>Varma, V.</b>, & Wäckers, F. L. (2012). Realising multiple ecosystem services based on the response of three beneficial insect groups to floral traits and trait diversity. Basic and Applied Ecology, 13(4), 363-370.</a></p>
+<p><a href="https://www.sciencedirect.com/science/article/abs/pii/S143917911200045X"><b>Realising multiple ecosystem services based on the response of three beneficial insect groups to floral traits and trait diversity</b></a>
+  <br>
+  <psub>Campbell, A. J., Biesmeijer, J. C., <b>Varma, V.</b>, & Wäckers, F. L. (2012). Realising multiple ecosystem services based on the response of three beneficial insect groups to floral traits and trait diversity. <i>Basic and Applied Ecology</i>, 13(4), 363-370. doi: 10.1016/j.baae.2012.04.003</psub>
+</p>
+
+
+<br>
+<hr>
+<br>
+
+
 
 </div>
 
