new website layout

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Varun Varma - Research</title>
+		<title>Varun Varma - Contact</title>
 		<link rel="stylesheet" href="simplestylesheet.css">
 	</head>
 
@@ -22,17 +22,11 @@
 		</ul>
 
 		
+		<p><center><img src="./images/vvarma_portrait_03.jpg" width=250px></center><p>
 		
-		<h2>Research</h2>
+		<h2 style = "text-align: center">Contact details</h2>
 		
-		<p>More coming soon...</p>
-		
-		<p>But in the meantime, you can have a look at my profiles below.</p>
-		<br>
-		<p style = "text-align: center"><a href="https://scholar.google.com/citations?hl=en&user=UIswT8wAAAAJ"><img src="./images/googlescholarlogo.png" width=80px><br>Google scholar<br>profile</a><p>
-		<br>
-		
-		<p style = "text-align: center"><a href="https://www.researchgate.net/profile/Varun-Varma-2"><img src="./images/rglogo.png" width=80px><br>ResearchGate<br>profile</a><p>
+		<p style = "text-align: center"><b>Dr. Varun Varma</b><br>Research Data Science Group<br>Intelligent Data Ecosystems<br>Rothamsted Research<br>Harpenden, AL5 2JQ, UK.<br>Email: varun.varma@rothamsted.ac.uk<p>
 		
 		<br>
 		<hr>
@@ -42,3 +36,4 @@
 
 
 </html>
+
