--- a/index.html
+++ b/index.html
@@ -2,51 +2,43 @@
 
 <html>
 
-<head>
-<title>Varun Varma - personal webpage</title>
-<link rel="stylesheet" href="mystylesheet.css">
-</head>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Varun Varma - Home</title>
+		<link rel="stylesheet" href="simplestylesheet.css">
+	</head>
 
-<body>
+	<body>
+		
+		<h1 class = cen>Varun Varma</h1>
+		<ul>
+			<li><a class="menu" href="index.html">Home</a></li>
+			<li><a class="menu" href="research.html">Research</a></li>
+			<li><a class="menu" href="publications.html">Publications</a></li>
+			<!--<li><a class="menu" href="#simplesummaries.html">Simple summaries</a></li>-->
+			<!--<li><a class="menu" href="#media.html">Media</a></li>-->
+			<!--<li><a class="menu" href="#Blog">Blog</a></li>-->
+			<li><a class="menu" href="contact.html">Contact</a></li>
+		</ul>
 
-<div class="sidebar">
-
-<img width=100% src="images/vvarma_portrait_03.jpg">
-
-<p>
-<a href="index.html">Home</a><br>
-<a href="research.html">Research</a><br>
-<a href="publications.html">Publications</a><br>
-<br>
-Email:<br>
-varun.varma@rothamsted.ac.uk<br>
-</p>
-</div>
-
-
-<div class="main">
-<h1>Varun Varma</h1>
-
-<p>I am an ecosystems ecologist with an interest in all things quantitative and ecology. My research focusses on global change, biodiversity, landscape ecology, vegetation dynamics, ecosystem function, ecosystem services and food security.</p>
-
-<p>At present, I am an ecosystems services modeller on the <a href="https://landscapedecisions.org/agland/">AgLand</a> project at Rothamsted Research, UK. The AgLand project, a collaboration between Rothamsted Research, UK's Centre for Ecology and Hydrology, and The James Hutton Institute, is looking at providing new data and models that enable the design of agricultural landscapes in the UK to deliver both sustainable food production and environmental benefits.</p>
-
-<p>From 2016 to 2020 I was a post-doctoral research fellow at the University of Exeter. I worked (and still contribute) as a modeller on the project "Securing the Future of the UK's Favourite Fruit", or <a href="https://bananex.org/">"BananEx"</a>, for short. My role within the project was to assess the risks to global banana production from climate change, extreme weather events and disease using statistical modelling and remote sensing.</p>
-
-<p>I completed my PhD in 2017 from the National Centre for Biological Sciences (NCBS) in Bangalore. During my PhD, I investigated how the deposition of nitrogen and phosphorus compounds resulting from human activities affects the recruitment and establishment of savanna and tropical dry forest trees.</p>
-
-<br>
-
-<hr>
-
-<br>
+		
+		<p><center><img src="./images/vvarma_portrait_03.jpg" width=250px></center><p>
 
 
-</div>
+		<p>I am an ecosystems ecologist with an interest in all things quantitative and ecology. My research focusses on global change, biodiversity, landscape ecology, vegetation dynamics, ecosystem function, ecosystem services and food security.</p>
+
+		<p>At present, I am an ecosystems services modeller on the <a href="https://landscapedecisions.org/agland/">AgLand</a> project at Rothamsted Research, UK. The AgLand project, a collaboration between Rothamsted Research, UK's Centre for Ecology and Hydrology, and The James Hutton Institute, is looking at providing new data and models that enable the design of agricultural landscapes in the UK to deliver both sustainable food production and environmental benefits.</p>
+
+		<p>From 2016 to 2020 I was a post-doctoral research fellow at the University of Exeter. I worked (and still contribute) as a modeller on the project "Securing the Future of the UK's Favourite Fruit", or <a href="https://bananex.org/">"BananEx"</a>, for short. My role within the project was to assess the risks to global banana production from climate change, extreme weather events and disease using statistical modelling and remote sensing.</p>
+
+		<p>I completed my PhD in 2017 from the National Centre for Biological Sciences (NCBS) in Bangalore. During my PhD, I investigated how the deposition of nitrogen and phosphorus compounds resulting from human activities affects the recruitment and establishment of savanna and tropical dry forest trees.</p>
+		
+		<br>
+		<hr>
+		<br>
 
 
+	</body>
 
-
-</body>
 
 </html>
