added conferences and seminars to publication page

--- a/publications.html
+++ b/publications.html
@@ -105,6 +105,63 @@
 
 
 		<br>
+		<br>
+		
+		<h2>Conferences and Seminars</h2>
+		
+		<p><b>Trade-offs in using landscape archetypes to plan ecosystem service delivery</b>
+		<br>
+		<psub><b>Varma, V.</b>, Evans, P.M., Bullock, J.M. and Mead, A. (2022) <i>British Ecological Society Annual Meeting, Edinburgh.</i></psub>
+		</p>
+		
+		<p><b>Affordable access and open access publishing</b>
+		<br>
+		<psub>Panellist - ChronosHub webinar series (2022)</psub>
+		</p>
+		
+		<p><b>Research and Scholarly Publishing Forum</b>
+		<br>
+		<psub>Panellist - London Book Fair (2022)</psub>
+		</p>
+		
+		<p><b>Mapping technologies that complement territorial pest risk assessment</b>
+		<br>
+		<psub><b>Varma, V.</b> and Bebber, D.P. (2021) <i>United Nations Food and Agricultural Organisation (FAO) World Banana Forum (WBF) conference: Capacity building and awareness raising in response to the threat of Fusarium Wilt of banana Tropical Race 4.</i></psub>
+		</p>
+		
+		<p><b>Global banana production monitoring using remote sensing</b>
+		<br>
+		<psub><b>Varma, V.</b>, Oliver, S. and Bebber, D.P. (2019) <i>Science and Technology Facilities Council Food Network Annual Meeting, Manchester.</i></psub>
+		</p>
+		
+		<p><b>Modelling risks and opportunities for global banana production systems</b>
+		<br>
+		<psub><b>Varma, V.</b> and Bebber, D.P. (2019) <i>British Ecological Society Macro-ecology Special Interest Group, Penryn</i></psub>
+		</p>
+		
+		<p><b>BananEx: Securing the future of the UK's favourite fruit</b>
+		<br>
+		<psub><b>Varma, V.</b> and Bebber, D.P. (2019) <i>United Nations Food and Agricultural Organisation (FAO) 16th Steering Committee meeting of the World Banana Forum (WBF), Rome.</i></psub>
+		</p>
+		
+		<p><b>Nutrient depostion alters post-fire survival in N-fixing and non-N-fixing tropical dry forest tree seedlings</b>
+		<br>
+		<psub><b>Varma, V.</b> and Sankaran, M. (2015) <i>British Ecological Society Annual Meeting, Edinburgh.</i></psub>
+		</p>
+		
+		<p><b>Effects of nutrient deposition on germination of tropical dry forest tree seedlings</b>
+		<br>
+		<psub><b>Varma, V.</b> and Sankaran, M. (2013) <i>Student Conference for Conservation Science (SCCS), Bangalore.</i></psub>
+		</p>
+		
+		<p><b>Effect of density and fire on savanna tree patch mortality</b>
+		<br>
+		<psub><b>Varma, V.</b>, Moustakas, A. and Sankaran, M. (2009) <i>52nd International Association of Vegetation Science (IAVS) symposium, Crete.</i></psub>
+		</p>
+		
+		<br>
+		<br>
+		
 		<hr>
 		<br>
 
