added GFVC preprint reference

--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,11 @@
 		
 		<h2>Publications</h2>
 
+			<p><a href="https://www.researchsquare.com/article/rs-2601467/v1"><b>Smallholder farmer resilience to extreme weather events in global food value chains.</b></a>
+			  <br>
+			  <psub>Thompson, W.J., <b>Varma, V.</b>, Joerin, J., Bonilla-Duarte, S., Bebber, D.P., Blaser-Hart, W., Kopainsky, B., Späth, L., Curcio, B., Six, J. & Krütli, P.  (2021). Smallholder farmer resilience to extreme weather events in global food value chains.. <i>Research Square (preprint)</i>. doi: 10.21203/rs.3.rs-2601467/v1</psub>
+			</p>
+
 			<p><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvs.13020"><b>Nutrient deposition enhances post‐fire survival in non‐N‐fixing savanna tree seedlings</b></a>
 			  <br>
 			  <psub><b>Varma, V.</b>, & Sankaran, M. (2021). Nutrient deposition enhances post‐fire survival in non‐N‐fixing savanna tree seedlings. <i>Journal of Vegetation Science</i>, 32(2). doi: 10.1111/jvs.13020</psub>
@@ -30,7 +35,7 @@
 
 			<p><a href="https://www.biorxiv.org/content/10.1101/2020.09.20.304899v1"><b>Mapping the impacts of hurricanes Maria and Irma on banana production area in the Dominican Republic</b></a>
 			  <br>
-			  <psub><b>Varma, V.</b>, Thompson, W., Duarte, S. B., Krütli, P., Six, J., & Bebber, D. P. (2020). Mapping the impacts of hurricanes Maria and Irma on banana production area in the Dominican Republic. <i>bioRxiv</i>. doi: 10.1101/2020.09.20.304899</psub>
+			  <psub><b>Varma, V.</b>, Thompson, W., Duarte, S. B., Krütli, P., Six, J., & Bebber, D. P. (2020). Mapping the impacts of hurricanes Maria and Irma on banana production area in the Dominican Republic. <i>bioRxiv (preprint)</i>. doi: 10.1101/2020.09.20.304899</psub>
 			</p>
 
 			<p><a href="https://www.frontiersin.org/articles/10.3389/ffgc.2019.00087/full"><b>Hunting and forest modification have distinct defaunation impacts on tropical mammals and birds</b></a>
