correcting small typos in publications

--- a/publications.html
+++ b/publications.html
@@ -23,9 +23,9 @@
 		
 		<h2>Publications</h2>
 
-			<p><a href="https://www.researchsquare.com/article/rs-2601467/v1"><b>Smallholder farmer resilience to extreme weather events in global food value chains.</b></a>
+			<p><a href="https://www.researchsquare.com/article/rs-2601467/v1"><b>Smallholder farmer resilience to extreme weather events in global food value chains</b></a>
 			  <br>
-			  <psub>Thompson, W.J., <b>Varma, V.</b>, Joerin, J., Bonilla-Duarte, S., Bebber, D.P., Blaser-Hart, W., Kopainsky, B., Späth, L., Curcio, B., Six, J. & Krütli, P.  (2023). Smallholder farmer resilience to extreme weather events in global food value chains.. <i>Climatic Change (in press)</i>. doi: 10.21203/rs.3.rs-2601467/v1</psub>
+			  <psub>Thompson, W.J., <b>Varma, V.</b>, Joerin, J., Bonilla-Duarte, S., Bebber, D.P., Blaser-Hart, W., Kopainsky, B., Späth, L., Curcio, B., Six, J. & Krütli, P.  (2023). Smallholder farmer resilience to extreme weather events in global food value chains. <i>Climatic Change (in press)</i>. doi: 10.21203/rs.3.rs-2601467/v1</psub>
 			</p>
 
 			<p><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvs.13020"><b>Nutrient deposition enhances post‐fire survival in non‐N‐fixing savanna tree seedlings</b></a>
