Added sedimentation preprint adn landscape decisions conference to publications

--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,11 @@
 		
 		<h2>Publications</h2>
 
+			<p><a href="https://www.biorxiv.org/content/10.1101/2023.08.17.553678v1"><b>A model of sediment retention by vegetation for Great Britain: new methodologies & validation</b></a>
+			<br>
+			<psub>Hooftman, D.A.P., Bullock, J.M., Evans, P.M., Redhead, J.W., Ridding, L.E., <b>Varma, V.</b>, and Pywell, R.F. (2023). A model of sediment retention by vegetation for Great Britain: new methodologies & validation. <i>bioRxiv (preprint)</i>. doi: 10.1101/2023.08.17.553678</psub>
+			</p>
+
 			<p><a href="https://www.researchsquare.com/article/rs-2601467/v1"><b>Smallholder farmer resilience to extreme weather events in global food value chains</b></a>
 			  <br>
 			  <psub>Thompson, W.J., <b>Varma, V.</b>, Joerin, J., Bonilla-Duarte, S., Bebber, D.P., Blaser-Hart, W., Kopainsky, B., Späth, L., Curcio, B., Six, J. & Krütli, P.  (2023). Smallholder farmer resilience to extreme weather events in global food value chains. <i>Climatic Change (in press)</i>. doi: 10.21203/rs.3.rs-2601467/v1</psub>
@@ -114,6 +119,11 @@
 		
 		<h2>Conferences and Seminars</h2>
 		
+		<p><b>A new approach to associating ecosystem service delivery to land and farm system archetypes</b>
+		<br>
+		<psub><b>Varma, V.</b>, Evans, P.M., Bullock, J.M. and Mead, A. (2023) <i>Landscape Decisions Programme Conference, Royal Society, London.</i></psub>
+		</p>
+
 		<p><b>Trade-offs in using landscape archetypes to plan ecosystem service delivery</b>
 		<br>
 		<psub><b>Varma, V.</b>, Evans, P.M., Bullock, J.M. and Mead, A. (2022) <i>British Ecological Society Annual Meeting, Edinburgh.</i></psub>
