--- a/publications.html
+++ b/publications.html
@@ -23,15 +23,15 @@
 		
 		<h2>Publications</h2>
 
+			<p><a href="https://link.springer.com/article/10.1007/s10584-023-03586-1"><b>Smallholder farmer resilience to extreme weather events in global food value chains</b></a>
+			<br>
+			<psub>Thompson, W.J., <b>Varma, V.</b>, Joerin, J., Bonilla-Duarte, S., Bebber, D.P., Blaser-Hart, W., Kopainsky, B., Späth, L., Curcio, B., Six, J. & Krütli, P.  (2023). Smallholder farmer resilience to extreme weather events in global food value chains. <i>Climatic Change</i>, 176:152. doi: 10.1007/s10584-023-03586-1</psub>
+			</p>
+
 			<p><a href="https://www.biorxiv.org/content/10.1101/2023.08.17.553678v1"><b>A model of sediment retention by vegetation for Great Britain: new methodologies & validation</b></a>
 			<br>
 			<psub>Hooftman, D.A.P., Bullock, J.M., Evans, P.M., Redhead, J.W., Ridding, L.E., <b>Varma, V.</b>, and Pywell, R.F. (2023). A model of sediment retention by vegetation for Great Britain: new methodologies & validation. <i>bioRxiv (preprint)</i>. doi: 10.1101/2023.08.17.553678</psub>
-			</p>
-
-			<p><a href="https://www.researchsquare.com/article/rs-2601467/v1"><b>Smallholder farmer resilience to extreme weather events in global food value chains</b></a>
-			  <br>
-			  <psub>Thompson, W.J., <b>Varma, V.</b>, Joerin, J., Bonilla-Duarte, S., Bebber, D.P., Blaser-Hart, W., Kopainsky, B., Späth, L., Curcio, B., Six, J. & Krütli, P.  (2023). Smallholder farmer resilience to extreme weather events in global food value chains. <i>Climatic Change (in press)</i>. doi: 10.21203/rs.3.rs-2601467/v1</psub>
-			</p>
+			</p>		
 
 			<p><a href="https://onlinelibrary.wiley.com/doi/10.1111/jvs.13020"><b>Nutrient deposition enhances post‐fire survival in non‐N‐fixing savanna tree seedlings</b></a>
 			  <br>
