--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,11 @@
 		
 		<h2>Publications</h2>
 
+			<p><a href="https://link.springer.com/article/10.1007/s10584-023-03586-1"><b>Identifying pathways to more sustainable farming using archetypes and multi-objective optimisation</b></a>
+			<br>
+			<psub>Bütikofer, L., Goodwin, C.E., <b>Varma, V.</b>, Evans, P.M., Redhead, J.W., Bullock, J.M., Pywell, R.F., Mead, A., Richter, G.M. & Storkey, J. (2024). Identifying pathways to more sustainable farming using archetypes and multi-objective optimisation. <i>Ecological Indicators</i>, 166, p.112433. doi: 10.1016/j.ecolind.2024.112433</psub>
+			</p>
+			
 			<p><a href="https://link.springer.com/article/10.1007/s10584-023-03586-1"><b>Smallholder farmer resilience to extreme weather events in global food value chains</b></a>
 			<br>
 			<psub>Thompson, W.J., <b>Varma, V.</b>, Joerin, J., Bonilla-Duarte, S., Bebber, D.P., Blaser-Hart, W., Kopainsky, B., Späth, L., Curcio, B., Six, J. & Krütli, P.  (2023). Smallholder farmer resilience to extreme weather events in global food value chains. <i>Climatic Change</i>, 176:152. doi: 10.1007/s10584-023-03586-1</psub>
