changes made to link - had not been updated

--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,9 @@
 		
 		<h2>Publications</h2>
 
-			<p><a href="https://link.springer.com/article/10.1007/s10584-023-03586-1"><b>Identifying pathways to more sustainable farming using archetypes and multi-objective optimisation</b></a>
+			
+			
+			<p><a href="https://www.sciencedirect.com/science/article/pii/S1470160X24008902"><b>Identifying pathways to more sustainable farming using archetypes and multi-objective optimisation</b></a>
 			<br>
 			<psub>Bütikofer, L., Goodwin, C.E., <b>Varma, V.</b>, Evans, P.M., Redhead, J.W., Bullock, J.M., Pywell, R.F., Mead, A., Richter, G.M. & Storkey, J. (2024). Identifying pathways to more sustainable farming using archetypes and multi-objective optimisation. <i>Ecological Indicators</i>, 166, p.112433. doi: 10.1016/j.ecolind.2024.112433</psub>
 			</p>
