added ref for biorxiv simulations manuscript for agland
corrected typo in ecological indicators reference

--- a/publications.html
+++ b/publications.html
@@ -23,11 +23,14 @@
 		
 		<h2>Publications</h2>
 
-			
+			<p><a href="https://www.biorxiv.org/content/10.1101/2024.08.01.606212v1"><b>Sensitivities in associating land-system archetypes with sustainability metrics: Insights from simulations</b></a>
+			<br>
+			<psub>Varma, V., Evans, P.M., Butikofer, L., Goodwin, C.E., Pywell, R.F., Redhead, J.W., Storkey, J., Bullock, J.M. and Mead, A., 2024. Sensitivities in associating land-system archetypes with sustainability metrics: Insights from simulations. <i>bioRxiv (preprint)</i>. doi: 10.1101/2024.08.01.606212</psub>
+			</p>
 			
 			<p><a href="https://www.sciencedirect.com/science/article/pii/S1470160X24008902"><b>Identifying pathways to more sustainable farming using archetypes and multi-objective optimisation</b></a>
 			<br>
-			<psub>Bütikofer, L., Goodwin, C.E., <b>Varma, V.</b>, Evans, P.M., Redhead, J.W., Bullock, J.M., Pywell, R.F., Mead, A., Richter, G.M. & Storkey, J. (2024). Identifying pathways to more sustainable farming using archetypes and multi-objective optimisation. <i>Ecological Indicators</i>, 166, p.112433. doi: 10.1016/j.ecolind.2024.112433</psub>
+			<psub>Bütikofer, L., Goodwin, C.E., <b>Varma, V.</b>, Evans, P.M., Redhead, J.W., Bullock, J.M., Pywell, R.F., Mead, A., Richter, G.M. and Storkey, J. (2024). Identifying pathways to more sustainable farming using archetypes and multi-objective optimisation. <i>Ecological Indicators</i>, 166, p.112433. doi: 10.1016/j.ecolind.2024.112433</psub>
 			</p>
 			
 			<p><a href="https://link.springer.com/article/10.1007/s10584-023-03586-1"><b>Smallholder farmer resilience to extreme weather events in global food value chains</b></a>
