--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
 
 			<p><a href="https://www.biorxiv.org/content/10.1101/2024.08.01.606212v1"><b>Sensitivities in associating land-system archetypes with sustainability metrics: Insights from simulations</b></a>
 			<br>
-			<psub><b>Varma, V.</b>, Evans, P.M., Butikofer, L., Goodwin, C.E., Pywell, R.F., Redhead, J.W., Storkey, J., Bullock, J.M. and Mead, A., 2024. Sensitivities in associating land-system archetypes with sustainability metrics: Insights from simulations. <i>bioRxiv (preprint)</i>. doi: 10.1101/2024.08.01.606212</psub>
+			<psub><b>Varma, V.</b>, Evans, P.M., Butikofer, L., Goodwin, C.E., Pywell, R.F., Redhead, J.W., Storkey, J., Bullock, J.M. and Mead, A. (2024). Sensitivities in associating land-system archetypes with sustainability metrics: Insights from simulations. <i>bioRxiv (preprint)</i>. doi: 10.1101/2024.08.01.606212</psub>
 			</p>
 			
 			<p><a href="https://www.sciencedirect.com/science/article/pii/S1470160X24008902"><b>Identifying pathways to more sustainable farming using archetypes and multi-objective optimisation</b></a>
