added genomics preprint reference

--- a/publications.html
+++ b/publications.html
@@ -28,6 +28,11 @@
 			<psub><b>Varma, V.</b>, Evans, P.M., Butikofer, L., Goodwin, C.E., Pywell, R.F., Redhead, J.W., Storkey, J., Bullock, J.M. and Mead, A. (2024). Sensitivities in associating land-system archetypes with sustainability metrics: Insights from simulations. <i>bioRxiv (preprint)</i>. doi: 10.1101/2024.08.01.606212</psub>
 			</p>
 			
+			<p><a href="https://www.biorxiv.org/content/10.1101/2024.08.09.607295v1"><b><i>De novo</i> genome sequence assembly of the RNAi-tractable endosymbiosis model system <i>Paramecium bursaria</i> 186b reveals factors shaping intron repertoire</b></a>
+			<br>
+			<psub>Leonard, G., Jenkins, B.H., Savory, F.R., Kilias, E.S., Maguire, F., <b>Varma, V.</b>, Milner, D.S. and Richards, T.A. (2024). <i>De novo</i> genome sequence assembly of the RNAi-tractable endosymbiosis model system <i>Paramecium bursaria</i> 186b reveals factors shaping intron repertoire. <i>bioRxiv (preprint)</i>. doi: 10.1101/2024.08.09.607295</psub>
+			</p>
+			
 			<p><a href="https://www.sciencedirect.com/science/article/pii/S1470160X24008902"><b>Identifying pathways to more sustainable farming using archetypes and multi-objective optimisation</b></a>
 			<br>
 			<psub>Bütikofer, L., Goodwin, C.E., <b>Varma, V.</b>, Evans, P.M., Redhead, J.W., Bullock, J.M., Pywell, R.F., Mead, A., Richter, G.M. and Storkey, J. (2024). Identifying pathways to more sustainable farming using archetypes and multi-objective optimisation. <i>Ecological Indicators</i>, 166, p.112433. doi: 10.1016/j.ecolind.2024.112433</psub>
