--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,11 @@
 		
 		<h2>Publications</h2>
 
+			<p><a href="https://www.biorxiv.org/content/10.1101/2024.10.11.617771v1"><b>Quantifying relative sponginess: a high-resolution model of landscape water retention as an ecosystem service</b></a>
+			<br>
+			<psub>Evans, P.M., Dussaillant, A., <b>Varma, V.</b>, Redhead, J.W., Pywell, R.F., Storkey, J., Mead, A. and Bullock, J.M. (2024). Quantifying relative sponginess: a high-resolution model of landscape water retention as an ecosystem service. <i>bioRxiv (preprint)</i>. doi: 10.1101/2024.10.11.617771</psub>
+			</p>
+
 			<p><a href="https://www.biorxiv.org/content/10.1101/2024.08.01.606212v1"><b>Sensitivities in associating land-system archetypes with sustainability metrics: Insights from simulations</b></a>
 			<br>
 			<psub><b>Varma, V.</b>, Evans, P.M., Butikofer, L., Goodwin, C.E., Pywell, R.F., Redhead, J.W., Storkey, J., Bullock, J.M. and Mead, A. (2024). Sensitivities in associating land-system archetypes with sustainability metrics: Insights from simulations. <i>bioRxiv (preprint)</i>. doi: 10.1101/2024.08.01.606212</psub>
