--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 		
 		<h2 style = "text-align: center">Contact details</h2>
 		
-		<p style = "text-align: center"><b>Dr. Varun Varma</b><br>Research Data Science Group<br>Intelligent Data Ecosystems<br>Rothamsted Research<br>Harpenden, AL5 2JQ, UK.<br>Email: varun.varma@rothamsted.ac.uk<p>
+		<p style = "text-align: center"><b>Dr. Varun Varma</b><br>Ecosystems Services Modeller<br>Net Zero and Resilient Farming<br>Rothamsted Research<br>Harpenden, AL5 2JQ, UK.<br>Email: varun.varma@rothamsted.ac.uk<p>
 		
 		<br>
 		<hr>
